Second Project Completed

--- a/01_style.css
+++ b/01_style.css
@@ -20,14 +20,18 @@ span {
 
 #grey {
   background: grey;
+  cursor: pointer;
 }
 
 #white {
   background: white;
+  cursor: pointer;
 }
 #blue {
   background: blue;
+  cursor: pointer;
 }
 #yellow {
   background: yellow;
+  cursor: pointer;
 }
